refactor: modify the implementation and struct of projects APIs relative to users
- updated response models to include member labor information
- refactored project service to include user labor information in project responses
- updated project handler to remove unused labor division handler
- added soft link creation for configuration files in the build script
